--- a/roombooking-common/pom.xml
+++ b/roombooking-common/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>booking-common</artifactId>
+    <artifactId>roombooking-common</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
