--- a/roombooking-payment/pom.xml
+++ b/roombooking-payment/pom.xml
@@ -18,6 +18,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.thebreak</groupId>
+            <artifactId>roombooking-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.thebreak</groupId>
+            <artifactId>roombooking-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -33,6 +43,8 @@
             <groupId>com.braintreepayments.gateway</groupId>
             <artifactId>braintree-java</artifactId>
         </dependency>
+
+
     </dependencies>
 
 </project>
