--- a/roombooking-app/pom.xml
+++ b/roombooking-app/pom.xml
@@ -23,6 +23,10 @@
          <version>1.0-SNAPSHOT</version>
      </dependency>
 
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-openfeign</artifactId>
+     </dependency>
     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter</artifactId>
@@ -50,4 +54,5 @@
         <artifactId>springdoc-openapi-ui</artifactId>
     </dependency>
  </dependencies>
+
 </project>
