--- a/roombooking-app/pom.xml
+++ b/roombooking-app/pom.xml
@@ -54,5 +54,13 @@
         <artifactId>springdoc-openapi-ui</artifactId>
     </dependency>
  </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
