--- a/roombooking-dictionary/src/main/resources/application.yml
+++ b/roombooking-dictionary/src/main/resources/application.yml
@@ -7,10 +7,10 @@ spring:
       port: 27017
       database: roombooking
       #when using docker deployment, mongodb host is not localhost any more; it need to match the mongo container name
-      #      host: mongoDocker
+      host: mongoDocker
 
       # this is only for local mac use
-      host: localhost
-      username: root
-      password: root
-      authentication-database: admin
+#      host: localhost
+#      username: root
+#      password: root
+#      authentication-database: admin
