--- a/roombooking-app/src/main/resources/application.yml
+++ b/roombooking-app/src/main/resources/application.yml
@@ -3,8 +3,11 @@ server:
 
 #when using docker, need to change the host name accordingly
 bookingFeign:
-  email-host-name: bookingemail
-  payment-host-name: bookingpayment
+#  email-host-name: bookingemail
+#  payment-host-name: bookingpayment
+
+  email-host-name: localhost
+  payment-host-name: localhost
 
 spring:
   data:
@@ -12,11 +15,9 @@ spring:
       port: 27017
       database: roombooking
       #when using docker deployment, mongodb host is not localhost any more; it need to match the mongo container name
-      host: mongoDocker
+#      host: mongoDocker
 
 
       # this is only for local mac use
-#      host: localhost
-#      username: root
-#      password: root
-#      authentication-database: admin
+      host: localhost
+
