--- a/roombooking-payment/src/main/resources/application.yml
+++ b/roombooking-payment/src/main/resources/application.yml
@@ -11,13 +11,13 @@ spring:
   data:
     mongodb:
       port: 27017
-      database: roombooking
+      database: payment
       #when using docker deployment, mongodb host is not localhost any more; it need to match the mongo container name
-      host: mongoDocker
+#      host: mongoDocker
 
 
       # this is only for local mac use
-#      host: localhost
+      host: localhost
 #      username: root
 #      password: root
 #      authentication-database: admin
