--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,16 +1,36 @@
 server:
-  port: 8080
+  port: ${appPort}
 
 spring:
+
+
   application:
-    name: booking-api
+    name: booking-gateway
   cloud:
     gateway:
+#      routes:
+#        - id: booking-app
+#          uri: http://booking-app:8081/
+#          predicates:
+#            - Path=/api/v1/app/**
+#        - id: booking-payment
+#          uri: http://booking-payment:8084/
+#          predicates:
+#            - Path=/api/v1/payment/**
+#        - id: booking-email
+#          uri: http://booking-email:8085/
+#          predicates:
+#            - Path=/api/v1/email/**
+#        - id: booking-dictionary
+#          uri: http://booking-dictionary:8086/
+#          predicates:
+#            - Path=/api/v1/dicts/**
+
       routes:
         - id: booking-app
           uri: http://localhost:8081/
           predicates:
-            - Path=/api/v1/bookings/**, /api/v1/rooms/**
+            - Path=/api/v1/app/**
         - id: booking-payment
           uri: http://localhost:8084/
           predicates:
@@ -23,3 +43,13 @@ spring:
           uri: http://localhost:8086/
           predicates:
             - Path=/api/v1/dicts/**
+  zipkin:
+    sender:
+      type: web
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1.0
+logging:
+  level:
+    root: debug
