--- a/roombooking-app/pom.xml
+++ b/roombooking-app/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>roombooking-app</artifactId>
 
     <properties>
+        <appPort>8088</appPort>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
@@ -44,6 +45,15 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-sleuth</artifactId>
+     </dependency>
+     <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-zipkin</artifactId>
+         <version>2.2.8.RELEASE</version>
+     </dependency>
 
     <dependency>
         <groupId>org.projectlombok</groupId>
