--- a/roombooking-app/src/main/resources/application.yml
+++ b/roombooking-app/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
+  port: ${appPort}
 
 #when using docker, need to change the host name accordingly
 bookingFeign:
-#  email-host-name: bookingemail
-#  payment-host-name: bookingpayment
+#  email-host-name: booking-email
+#  payment-host-name: booking-payment
 
   email-host-name: localhost
   payment-host-name: localhost
@@ -17,7 +17,24 @@ spring:
       #when using docker deployment, mongodb host is not localhost any more; it need to match the mongo container name
 #      host: mongoDocker
 
-
       # this is only for local mac use
       host: localhost
-
+  application:
+    name: booking-app
+  zipkin:
+    sender:
+      type: web
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1.0
+springdoc:
+  swagger-ui:
+    path: /api/v1/app/swagger-ui.html
+  api-docs:
+    path: /api/v1/app/api-docs
+    groups:
+      enabled: true
+logging:
+  level:
+    root: debug
