--- a/roombooking-email/src/main/resources/application.yml
+++ b/roombooking-email/src/main/resources/application.yml
@@ -1,7 +1,14 @@
 server:
-  port: 8085
+  port: ${appPort}
 
 spring:
+  zipkin:
+    sender:
+      type: web
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1.0
   mail:
     host: smtp.gmail.com
     port: 587
@@ -13,3 +20,10 @@ spring:
           auth: true
           starttls:
             enable: true
+springdoc:
+  swagger-ui:
+    path: /api/v1/email/swagger-ui.html
+  api-docs:
+    path: /api/v1/email/api-docs
+    groups:
+      enabled: true
