--- a/roombooking-payment/src/main/resources/application.yml
+++ b/roombooking-payment/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8084
+  port: ${appPort}
 
 braintree:
   ENVIRONMENT: sandbox
@@ -8,6 +8,13 @@ braintree:
   PRIVATE_KEY: 7f9abd76c83b6b915384a4adf06bf9fc
 
 spring:
+  zipkin:
+    sender:
+      type: web
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+      probability: 1.0
   data:
     mongodb:
       port: 27017
@@ -18,6 +25,17 @@ spring:
 
       # this is only for local mac use
       host: localhost
-#      username: root
-#      password: root
-#      authentication-database: admin
+  application:
+    name: booking-payment
+
+springdoc:
+  swagger-ui:
+    path: /api/v1/payment/swagger-ui.html
+  api-docs:
+    path: /api/v1/payment/api-docs
+    groups:
+      enabled: true
+
+logging:
+  level:
+    root: debug
