--- a/roombooking-dictionary/src/main/resources/application.yml
+++ b/roombooking-dictionary/src/main/resources/application.yml
@@ -1,19 +1,13 @@
 server:
-  port: ${appPort}
+  port: 8086
 
 spring:
   data:
     mongodb:
       port: 27017
       database: dictionary
-      #when using docker deployment, mongodb host is not localhost any more; it need to match the mongo container name
-      host: mongoDocker
+      host: localhost
 
-      # this is only for local mac use
-#      host: localhost
-#      username: root
-#      password: root
-#      authentication-database: admin
 springdoc:
   swagger-ui:
     path: /api/v1/dicts/swagger-ui.html
