--- a/roombooking-payment/src/main/resources/application.yml
+++ b/roombooking-payment/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: ${appPort}
+  port: 8084
 
 braintree:
   ENVIRONMENT: sandbox
@@ -19,12 +19,8 @@ spring:
     mongodb:
       port: 27017
       database: payment
-      #when using docker deployment, mongodb host is not localhost any more; it need to match the mongo container name
-#      host: mongoDocker
-
-
-      # this is only for local mac use
       host: localhost
+
   application:
     name: booking-payment
 
