--- a/roombooking-payment/src/main/resources/application.yml
+++ b/roombooking-payment/src/main/resources/application.yml
@@ -8,18 +8,18 @@ braintree:
   PRIVATE_KEY: 7f9abd76c83b6b915384a4adf06bf9fc
 
 spring:
-  zipkin:
-    sender:
-      type: web
-    base-url: http://localhost:9411/
-  sleuth:
-    sampler:
-      probability: 1.0
+#  zipkin:
+#    sender:
+#      type: web
+#    base-url: http://localhost:9411/
+#  sleuth:
+#    sampler:
+#      probability: 1.0
   data:
     mongodb:
       port: 27017
       database: payment
-      host: localhost
+      host: mongoDocker
 
   application:
     name: booking-payment
@@ -34,4 +34,4 @@ springdoc:
 
 logging:
   level:
-    root: debug
+    root: info
