--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -2,7 +2,8 @@ server:
   port: 8080
 
 spring:
-
+  profiles:
+    active: dev
   application:
     name: booking-gateway
   cloud:
@@ -18,48 +19,6 @@ spring:
               - POST
               - PUT
               - DELETE
-      routes:
-        - id: booking-app
-          uri: http://roombooking-app:8081/
-          predicates:
-            - Path=/api/v1/app/**
-        - id: booking-payment
-          uri: http://roombooking-payment:8084/
-          predicates:
-            - Path=/api/v1/payment/**
-        - id: booking-email
-          uri: http://roombooking-email:8085/
-          predicates:
-            - Path=/api/v1/email/**
-        - id: booking-dictionary
-          uri: http://roombooking-dictionary:8086/
-          predicates:
-            - Path=/api/v1/dicts/**
 
-#      routes:
-#        - id: booking-app
-#          uri: http://localhost:8081/
-#          predicates:
-#            - Path=/api/v1/app/**
-#        - id: booking-payment
-#          uri: http://localhost:8084/
-#          predicates:
-#            - Path=/api/v1/payment/**
-#        - id: booking-email
-#          uri: http://localhost:8085/
-#          predicates:
-#            - Path=/api/v1/email/**
-#        - id: booking-dictionary
-#          uri: http://localhost:8086/
-#          predicates:
-#            - Path=/api/v1/dicts/**
-#  zipkin:
-#    sender:
-#      type: web
-#    base-url: http://localhost:9411/
-#  sleuth:
-#    sampler:
-#      probability: 1.0
-logging:
-  level:
-    root: info
+
+
