--- a/roombooking-common/pom.xml
+++ b/roombooking-common/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>spring-data-commons</artifactId>
             <version>2.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
