added Consul and email template

--- a/gateway/src/main/resources/application-dev.yml
+++ b/gateway/src/main/resources/application-dev.yml
@@ -3,22 +3,23 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: booking-app
+        - id: roombooking-app
           uri: http://localhost:8081/
           predicates:
             - Path=/api/v1/app/**
-        - id: booking-payment
+        - id: roombooking-payment
           uri: http://localhost:8084/
           predicates:
             - Path=/api/v1/payment/**
-        - id: booking-email
+        - id: roombooking-email
           uri: http://localhost:8085/
           predicates:
             - Path=/api/v1/email/**
-        - id: booking-dictionary
+        - id: roombooking-dictionary
           uri: http://localhost:8086/
           predicates:
             - Path=/api/v1/dicts/**
+
 #  zipkin:
 #    sender:
 #      type: web
