--- a/roombooking-payment/src/main/resources/application-dev.yml
+++ b/roombooking-payment/src/main/resources/application-dev.yml
@@ -12,6 +12,17 @@ spring:
       port: 27017
       database: payment
       host: localhost
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        register: true
+        instance-id: ${spring.application.name}-01
+        service-name: ${spring.application.name}
+        port: ${server.port}
+        prefer-ip-address: true
+        ip-address: ${spring.cloud.client.ip-address}
 
 logging:
   level:
