--- a/roombooking-payment/src/main/resources/application.yml
+++ b/roombooking-payment/src/main/resources/application.yml
@@ -9,9 +9,9 @@ braintree:
 
 spring:
   profiles:
-    active: prod
+    active: dev
   application:
-    name: booking-payment
+    name: roombooking-payment
 
 springdoc:
   swagger-ui:
