--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -20,6 +20,14 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-consul-discovery</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
 <!--        <dependency>-->
 <!--            <groupId>org.springframework.cloud</groupId>-->
 <!--            <artifactId>spring-cloud-starter-sleuth</artifactId>-->
@@ -29,6 +37,7 @@
 <!--            <artifactId>spring-cloud-starter-zipkin</artifactId>-->
 <!--            <version>2.2.8.RELEASE</version>-->
 <!--        </dependency>-->
+
     </dependencies>
 
     <build>
