--- a/pom.xml
+++ b/pom.xml
@@ -15,13 +15,14 @@
         <module>roombooking-payment</module>
         <module>roombooking-dictionary</module>
         <module>gateway</module>
+        <module>roombooking-eureka</module>
 
     </modules>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.9</version>
+        <version>2.4.3</version>
         <relativePath/>
     </parent>
 
