--- a/roombooking-app/pom.xml
+++ b/roombooking-app/pom.xml
@@ -44,14 +44,22 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-data-mongodb</artifactId>
     </dependency>
+<!--     <dependency>-->
+<!--         <groupId>org.springframework.cloud</groupId>-->
+<!--         <artifactId>spring-cloud-starter-sleuth</artifactId>-->
+<!--     </dependency>-->
+<!--     <dependency>-->
+<!--         <groupId>org.springframework.cloud</groupId>-->
+<!--         <artifactId>spring-cloud-starter-zipkin</artifactId>-->
+<!--         <version>2.2.8.RELEASE</version>-->
+<!--     </dependency>-->
      <dependency>
          <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-sleuth</artifactId>
+         <artifactId>spring-cloud-starter-consul-discovery</artifactId>
      </dependency>
      <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-zipkin</artifactId>
-         <version>2.2.8.RELEASE</version>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
      </dependency>
 
     <dependency>
