--- a/roombooking-email/src/main/resources/application.yml
+++ b/roombooking-email/src/main/resources/application.yml
@@ -2,7 +2,21 @@ server:
   port: 8085
 
 spring:
-#  zipkin:
+  application:
+    name: roombooking-email
+  cloud:
+    consul:
+      host: localhost
+      port: 8500
+      discovery:
+        register: true
+        instance-id: ${spring.application.name}-01
+        service-name: ${spring.application.name}
+        port: ${server.port}
+        prefer-ip-address: true
+        ip-address: ${spring.cloud.client.ip-address}
+
+  #  zipkin:
 #    sender:
 #      type: web
 #    base-url: http://localhost:9411/
@@ -20,8 +34,7 @@ spring:
           auth: true
           starttls:
             enable: true
-  application:
-    name: roombooking-email
+
 springdoc:
   swagger-ui:
     path: /api/v1/email/swagger-ui.html
