--- a/roombooking-email/src/main/resources/application.yml
+++ b/roombooking-email/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: breaknotification@gmail.com
-    password: jctebdtoijjfcanu
+    password:
     properties:
       mail:
         smtp:
