--- a/roombooking-file/src/main/resources/application.yml
+++ b/roombooking-file/src/main/resources/application.yml
@@ -8,7 +8,8 @@ cloud:
     stack:
       auto: false
     credentials:
-
+      access-key: xxxxx
+      secretKey: ddddd
 bookingBucket:
   name: bookingstorage
 spring:
