--- a/roombooking-email/src/main/resources/application.yml
+++ b/roombooking-email/src/main/resources/application.yml
@@ -26,8 +26,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: breaknotification@gmail.com
-    password: jctebdtoijjfcanu
+    username: 
+    password: 
     properties:
       mail:
         smtp:
