2 email kafka ok

--- a/roombooking-app/src/main/resources/application-dev.yml
+++ b/roombooking-app/src/main/resources/application-dev.yml
@@ -16,6 +16,13 @@ spring:
         port: ${server.port}
         prefer-ip-address: true
         ip-address: ${spring.cloud.client.ip-address}
+  kafka:
+    bootstrap-servers: localhost:9092
+    topics:
+      bookingEmailNotification: bookingEmailNotification
+      bookingEmailReminder: bookingEmailReminder
+      test: test
+
 
 #  zipkin:
 #    sender:
