--- a/roombooking-app/pom.xml
+++ b/roombooking-app/pom.xml
@@ -70,6 +70,10 @@
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi-ui</artifactId>
     </dependency>
+     <dependency>
+         <groupId>org.springframework.kafka</groupId>
+         <artifactId>spring-kafka</artifactId>
+     </dependency>
  </dependencies>
     <build>
         <plugins>
