--- a/roombooking-payment/src/main/resources/application-dev.yml
+++ b/roombooking-payment/src/main/resources/application-dev.yml
@@ -23,6 +23,11 @@ spring:
         port: ${server.port}
         prefer-ip-address: true
         ip-address: ${spring.cloud.client.ip-address}
+  kafka:
+    bootstrap-servers: localhost:9092
+    topics:
+      paymentSuccess: paymentSuccess
+
 
 logging:
   level:
