--- a/roombooking-app/src/main/resources/application.yml
+++ b/roombooking-app/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
 
 springdoc:
   swagger-ui:
-    path: /api/v1/app/swagger-ui.html
+    path: /api/v1/app/swagger.html
   api-docs:
     path: /api/v1/app/api-docs
     groups:
