booking reminder logic tested ok

--- a/gateway/src/main/resources/application-prod.yml
+++ b/gateway/src/main/resources/application-prod.yml
@@ -19,6 +19,10 @@ spring:
           uri: http://roombooking-dictionary:8086/
           predicates:
             - Path=/api/v1/dicts/**
+        - id: roombooking-file
+          uri: http://roombooking-file:8087/
+          predicates:
+            - Path=/api/v1/file/**
 
 logging:
   level:
