--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -11,10 +11,10 @@ spring:
     gateway:
       globalcors:
         corsConfigurations:
-          '[/**]':
-            allowedOrigins: "*"
-            allowedHeaders:
-              - content-type
+#          '[/**]':
+#            allowedOrigins: "*"
+#            allowedHeaders:
+#              - content-type
             allowedMethods:
               - GET
               - POST
