--- a/roombooking-file/src/main/resources/application.yml
+++ b/roombooking-file/src/main/resources/application.yml
@@ -17,6 +17,8 @@ spring:
     multipart:
       max-file-size: 20MB
       max-request-size: 20MB
+  application:
+    name: roombooking-file
 
 logging:
   level:
