--- a/gateway/src/main/resources/application-dev.yml
+++ b/gateway/src/main/resources/application-dev.yml
@@ -1,5 +1,11 @@
 
 spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+#          issuer-uri: http://localhost:8090/auth/realms/booking
+          jwk-set-uri: http://localhost:8090/auth/realms/booking/protocol/openid-connect/certs
   cloud:
     gateway:
       routes:
