--- a/gateway/src/main/resources/application-dev.yml
+++ b/gateway/src/main/resources/application-dev.yml
@@ -1,11 +1,5 @@
 
 spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-#          issuer-uri: http://localhost:8090/auth/realms/booking
-          jwk-set-uri: http://localhost:8090/auth/realms/booking/protocol/openid-connect/certs
   cloud:
     gateway:
       routes:
@@ -25,14 +19,11 @@ spring:
           uri: http://localhost:8086/
           predicates:
             - Path=/api/v1/dicts/**
+        - id: roombooking-file
+          uri: http://roombooking-file:8087/
+          predicates:
+            - Path=/api/v1/file/**
 
-#  zipkin:
-#    sender:
-#      type: web
-#    base-url: http://localhost:9411/
-#  sleuth:
-#    sampler:
-#      probability: 1.0
 logging:
   level:
     root: info
