--- a/roombooking-app/src/main/resources/application-dev.yml
+++ b/roombooking-app/src/main/resources/application-dev.yml
@@ -5,17 +5,17 @@ spring:
       port: 27017
       database: roombooking
       host: localhost
-  cloud:
-    consul:
-      host: localhost
-      port: 8500
-      discovery:
-        register: true
-        instance-id: ${spring.application.name}-01
-        service-name: ${spring.application.name}
-        port: ${server.port}
-        prefer-ip-address: true
-        ip-address: ${spring.cloud.client.ip-address}
+#  cloud:
+#    consul:
+#      host: localhost
+#      port: 8500
+#      discovery:
+#        register: true
+#        instance-id: ${spring.application.name}-01
+#        service-name: ${spring.application.name}
+#        port: ${server.port}
+#        prefer-ip-address: true
+#        ip-address: ${spring.cloud.client.ip-address}
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
