--- a/roombooking-app/src/main/resources/application-prod.yml
+++ b/roombooking-app/src/main/resources/application-prod.yml
@@ -5,22 +5,15 @@ spring:
       host: mongoDocker
       port: 27017
       database: roombooking
-  cloud:
-    consul:
-      host: localhost
-      port: 8500
-      discovery:
-        register: true
-        instance-id: ${spring.application.name}-01
-        service-name: ${spring.application.name}
-        port: ${server.port}
-        prefer-ip-address: true
-        ip-address: ${spring.cloud.client.ip-address}
   kafka:
     bootstrap-servers: kafka:9092
-    topic:
-      bookingEmailNotification: bookingEmailNotification
-      bookingEmailReminder: bookingEmailReminder
+    consumer:
+      group-id: "thebreak-email"
+    topics:
+      bookingSuccess: bookingSuccess
+      bookingReminder: bookingReminder
+      bookingClose: bookingClose
+      paymentSuccess: paymentSuccess
 
 logging:
   level:
