--- a/roombooking-dictionary/src/main/resources/application.yml
+++ b/roombooking-dictionary/src/main/resources/application.yml
@@ -6,17 +6,17 @@ spring:
     active: dev
   application:
     name: roombooking-dictionary
-  cloud:
-    consul:
-      host: localhost
-      port: 8500
-      discovery:
-        register: true
-        instance-id: ${spring.application.name}-01
-        service-name: ${spring.application.name}
-        port: ${server.port}
-        prefer-ip-address: true
-        ip-address: ${spring.cloud.client.ip-address}
+#  cloud:
+#    consul:
+#      host: localhost
+#      port: 8500
+#      discovery:
+#        register: true
+#        instance-id: ${spring.application.name}-01
+#        service-name: ${spring.application.name}
+#        port: ${server.port}
+#        prefer-ip-address: true
+#        ip-address: ${spring.cloud.client.ip-address}
 
 springdoc:
   swagger-ui:
