--- a/roombooking-email/src/main/resources/application.yml
+++ b/roombooking-email/src/main/resources/application.yml
@@ -4,19 +4,8 @@ server:
 spring:
   application:
     name: roombooking-email
-  cloud:
-    consul:
-      host: localhost
-      port: 8500
-      discovery:
-        register: true
-        instance-id: ${spring.application.name}-01
-        service-name: ${spring.application.name}
-        port: ${server.port}
-        prefer-ip-address: true
-        ip-address: ${spring.cloud.client.ip-address}
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: localhost:9092  #need to change to localhost for local
     topics:
       bookingSuccess: bookingSuccess
       bookingReminder: bookingReminder
@@ -26,13 +15,7 @@ spring:
       group-id: "thebreak-email"
 
 
-  #  zipkin:
-#    sender:
-#      type: web
-#    base-url: http://localhost:9411/
-#  sleuth:
-#    sampler:
-#      probability: 1.0
+
   mail:
     host: smtp.gmail.com
     port: 587
